--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -5,19 +5,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign up</title>
+    <title>Sign in</title>
 </head>
 
 <body>
-    <h1>Signup</h1>
-    <form method="post" action="/api/user/signup">
-        <label>Full name:</label>
-        <input type="text" name="name" />
+    <h1>Sign-in</h1>
+    <form method="post" action="/api/user/signin">
         <label>Email:</label>
         <input type="text" name="email" />
         <label>Password:</label>
         <input type="text" name="password" />
-        <button type="submit">Signup</button>
+        <button type="submit">Sign-in</button>
     </form>
 
 </body>
